Add RPE content, favicon, and tracker references

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,18 +1,15 @@
 ---
-title: Welcome to Starlight
-description: Get started building your docs site with Starlight.
+title: Welcome to rpe
+description: Get started with routine programming excercise.
 template: splash
 hero:
-  tagline: Congrats on setting up a new Starlight project!
+  tagline: Get started on your code training routine.
   image:
-    file: ../../assets/houston.webp
+    file: ../../assets/rpe.png
   actions:
-    - text: Example Guide
+    - text: Excercises
       link: /guides/example/
       icon: right-arrow
-    - text: Read the Starlight docs
-      link: https://starlight.astro.build
-      icon: external
       variant: minimal
 ---
 
@@ -21,16 +18,13 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 ## Next steps
 
 <CardGrid stagger>
-	<Card title="Update content" icon="pencil">
+	<Card title="Html routines" icon="laptop">
 		Edit `src/content/docs/index.mdx` to see this page change.
 	</Card>
-	<Card title="Add new content" icon="add-document">
-		Add Markdown or MDX files to `src/content/docs` to create new pages.
+	<Card title="join community" icon="discord">
+		(https://discord.gg/xZdWuuZ4RG/).
 	</Card>
-	<Card title="Configure your site" icon="setting">
-		Edit your `sidebar` and other config in `astro.config.mjs`.
-	</Card>
-	<Card title="Read the docs" icon="open-book">
-		Learn more in [the Starlight Docs](https://starlight.astro.build/).
+	<Card title="Read blog" icon="open-book">
+		keep up [@routine programmers](https://starlight.astro.build/).
 	</Card>
 </CardGrid>
